--- a/projet/src/main/resources/application.properties
+++ b/projet/src/main/resources/application.properties
@@ -10,5 +10,8 @@ spring.jpa.properties.hibernate.show_sql=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.generate-ddl=true
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.main.allow-circular-references=true
+server.servlet.context-path=/
 
